--- a/nbs/01_hexdump.ipynb
+++ b/nbs/01_hexdump.ipynb
@@ -40,9 +40,8 @@
    "source": [
     "#| export\n",
     "import ctypes\n",
-    "from collections import UserList\n",
-    "from pretty_ctypes.hexint import hexint, asciiint, HexInt, NamedInt, ctypes_int_types, ctypes_signed_types\n",
-    "from pretty_ctypes.utils import colored, batched"
+    "from lovely_ctypes.hexint import hexint, asciiint, ctypes_int_types, ctypes_signed_types\n",
+    "from lovely_ctypes.utils import colored, batched"
    ]
   },
   {
