--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# pretty-ctypes\n",
+    "# Lovely ctypes\n",
     "\n",
     "> Lets you visualize and compare nested C structures and arrays in Python"
    ]
